<resources>
    <string name="last_initial">Last Initial</string>
    <string name="first_name">First Name</string>
    <string name="sign_in">Sign In</string>
    <string name="choose_avatar">Choose an Avatar</string>
    <string name="an_avatar">An Avatar</string>
    <string name="quiz_of_quizzes">%1$s / %2$s</string>
    <string name="btn_true">True</string>
    <string name="btn_false">False</string>
    <string name="category">Category</string>
    <string name="sign_out">Sign out</string>
    <string name="x_points">%1$d pts</string>
    <string name="back">back</string>
    <string name="app_name">CollegeDekho</string>
    <string name="app_id">1701158673446224</string>
    <string name="loginFacebookButton">FACEBOOK LOGIN</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_notifications">NOTIFICATIONS</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_home">Home</string>
    <string name="home_search">Search Colleges</string>
    <string name="search_colleges">Search Colleges</string>
    <string name="news_image">News Image</string>
    <string name="article_image">Article Image</string>
    <string name="course_and_specialization">Course &amp; Specialization</string>
    <string name="which_locations">Which Locations</string>
    <string name="type_and_support_services">Type &amp; Support Services</string>
    <string name="campus_and_housing">Campus &amp; Housing</string>
    <string name="search_view_hint">"eg. IIT, Computers, B.tech"</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="application_service">Application Service</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_psychometric_analysis">PsychometricAnalysisActivity</string>
    <string name="videolist_activity">Videos</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="ok">OK</string>
    <string name="taptoaccept">TAP TO ACCEPT"</string>
    <string name="cancel">CANCEL</string>
    <string name="skip">SKIP</string>
    <string name="Skip">Skip</string>
    <string name="xscale">1.2f</string>
    <string name="yscale">1f</string>
    <string name="INTERNET_CONNECTION_ERROR">You are not connected to Internet</string>
    <string name="TRUE_SDK_USER_DENIED">User denied to sharing his/her profile details.</string>
    <string name="TRUE_SDK_INTERNAL_ERROR">Failed sharing -Reason: internal error.</string>
    <string name="TRUE_SDK_INVALID_USER">Failed sharing - Reason: unauthorized user.</string>
    <string name="THANKS_FOR_VOTE">Thanks for your vote</string>
    <string name="SELECT_ONE_EXAM">Select at least one Exam or click not preparing</string>
    <string name="QUESTION_TITLE_EMPTY">Question title cannot be empty</string>
    <string name="QUESTION_TEXT_EMPTY">Question text cannot be empty</string>
    <string name="ACCEPT_TERMS_AND_CONDITIONS">Please read and accept terms conditions</string>
    <string name="FACEBOOK_SIGNIN_FAILED">Facebook SignIn is failed</string>
    <string name="SIGNIN_ERROR">Failed to sign in Facebook</string>
    <string name="ALREADY_APPLIED">Already Applied</string>
    <string name="ALREADY_DISLIKED">Already Disliked</string>
    <string name="ALREADY_DOWN_VOTED">You have already down-voted it</string>
    <string name="ALREADY_UP_VOTED">You have already up-voted it</string>
    <string name="ENTER_YOUR_MESSAGE">Please enter your message</string>
    <string name="ENTER_YOUR_ANSWER">Please enter your answer</string>
    <string name="QNA_TITLE_ERROR_SHORT_TITLE">Please elaborate your title!</string>
    <string name="QNA_TITLE_ERROR_SPECIAL_CHARACTER">No special character please!</string>
    <string name="PREFS">sharedprefs</string>
    <string name="KEY_USER">user_id</string>
    <string name="TAG_CREATE_USER">create_user</string>
    <string name="ANONYMOUS_USER">Anonymous user</string>
    <string name="TAG_CREATE_ANONY_USER">create_anony_user</string>
    <string name="TAG_CREATE_FACEBOOK_ANONY_USER">create_facebook_anony_user</string>
    <string name="TAG_SKIP_LOGIN">skip_login</string>
    <string name="TAG_SKIP">Skip</string>
    <string name="TAG_USER_SIGNUP">user_sign_up</string>
    <string name="TAG_USER_FACEBOOK_LOGIN">user_facebook_login</string>
    <string name="TAG_USER_LOGIN">user_login</string>
    <string name="TAG_USER_REGISTRATION">user_registration</string>
    <string name="TAG_EDUCATION_DETAILS_SUBMIT">user_education_submit</string>
    <string name="TAG_EDIT_EDUCATION_DETAILS_SUBMIT">edited_user_education_submit</string>
    <string name="TAG_NOT_PREPARING_EDUCATION_DETAILS_SUBMIT">user_not_preparing_education_submit</string>
    <string name="TAG_EXAMS_LIST">exams_list</string>
    <string name="TAG_EDIT_EXAMS_LIST">edit_exams_list</string>
    <string name="TAG_LOAD_EXAMS_LIST">load_exams_list</string>
    <string name="TAG_SUBMIT_EXAMS_LIST">submit_exams_list</string>
    <string name="TAG_LOAD_USER_PREFERENCES">load_user_preferences</string>
    <string name="TAG_LOAD_USER_PREFERENCES_N_BACK">load_user_preferences_n_back</string>
    <string name="TAG_LAUNCH_USER_HOME">launch_user_home</string>
    <string name="TAG_SUBMIT_EDITED_EXAMS_LIST">submit_edited_exams_list</string>
    <string name="TAG_SUBMIT_PSYCHOMETRIC_EXAM">submit_psychometric_exam</string>
    <string name="TAG_SUBMIT_EDIT_PSYCHOMETRIC_EXAM">submit_edit_psychometric_exam</string>
    <string name="TAG_SUBMIT_SBS_EXAM">submit_sbs_exam</string>
    <string name="TAG_HOME_COLLEGE_LIST">Colleges</string>
    <string name="TAG_HOME_ASK_AND_CHAT">Ask &amp; Chat</string>
    <string name="TAG_HOME_NEWS_AND_UPDATES">News</string>
    <string name="TAG_HOME_PREPARE">Prepare</string>
    <string name="LABEL_CHAT_NOTIFICATION">Chat Notifications</string>
    <string name="LABEL_NEWS_NOTIFICATION">News Notifications</string>
    <string name="LABEL_ARTICLE_NOTIFICATION">Article Notifications</string>
    <string name="LABEL_OTHER_NOTIFICATION">Other Notifications</string>
    <string name="TAG_TAB_RECOMMENDED_COLLEGS">Recommended\nColleges</string>
    <string name="TAG_TAB_SHORTLISTED_COLLEGS">Shortlisted\nColleges</string>
    <string name="TAG_TAB_FEATURED_COLLEGS">Featured\nColleges</string>
    <string name="TAG_TAB_EXPLORE_COLLEGS">Explore\nColleges</string>
    <string name="TAG_LOAD_STREAM">load_stream</string>
    <string name="TAG_PSYCHOMETRIC_QUESTIONS">load_psychometric_questions</string>
    <string name="TAG_PSYCHOMETRIC_RESPONSE">load_psychometric_response</string>
    <string name="TAG_EDIT_PSYCHOMETRIC_QUESTIONS">load_edit_psychometric_questions</string>
    <string name="TAG_LOAD_STEP_BY_STEP">load_step_by_step</string>
    <string name="TAG_USER_EDUCATION">load_user_education</string>
    <string name="TAG_EDIT_USER_EDUCATION">load_edit_user_education</string>
    <string name="TAG_UPDATE_STREAM">update_stream</string>
    <string name="KEY_STREAMS">streams</string>
    <string name="USER_CREATED">user_created</string>
    <string name="USER_FEED_INVALIDATED">user_feed_invalidated</string>
    <string name="USER_HOME_LOADED">user_home_loaded</string>
    <string name="CAN_ASK_OTP_TODAY">can_ask_otp_today</string>
    <string name="WIDGET_INSTITUTES">institutes</string>
    <string name="PNS_INSTITUTES">pns_institutes</string>
    <string name="PNS_NEWS">pns_news</string>
    <string name="PNS_FORUM">pns_forum</string>
    <string name="PNS_QNA">pns_qna</string>
    <string name="PNS_ARTICLES">pns_articles</string>
    <string name="WIDGET_RECOMMENDED_INSTITUTES">recommended_institutes</string>
    <string name="WIDGET_SHORTLIST_INSTITUTES">shortlist_institutes</string>
    <string name="WIDGET_SYLLABUS">syllabus</string>
    <string name="WIDGET_TEST_CALENDAR">test_calendar</string>
    <string name="PLAY_VIDEO_NOTIFICATION">play_video_notification</string>
    <string name="SEARCHED_INSTITUTES">searched_institutes</string>
    <string name="WIDGET_COURSES">courses</string>
    <string name="WIDGET_NEWS">news</string>
    <string name="WIDGET_ARTICES">articles</string>
    <string name="WIDGET_FORUMS">forums</string>
    <string name="TAG_LOAD_QNA_QUESTIONS">qna</string>
    <string name="videos_title">Videos</string>
    <string name="qna_title">QnA</string>
    <string name="news_title">News</string>
    <string name="article_title">Articles</string>
    <string name="syllabus_title">Syllabus</string>
    <string name="test_calendar_title">Test Calendar</string>
    <string name="important_dates">Important Dates</string>
    <string name="IP">http://www.collegedekho.com</string>
    <string name="TAG_LOAD_COURSES">load_courses</string>
    <string name="TAG_APPLIED_COURSE">applied_course</string>
    <string name="TAG_POST_QUESTION">post_question</string>
    <string name="TAG_LOAD_FILTERS">load_filters</string>
    <string name="TAG_RESOURCE_URI">resource_uri</string>
    <string name="TAG_NOTIFICATION_ID">notification_id</string>
    <string name="TAG_FEED_ID">feed_id</string>
    <string name="TAG_NOTIFICATION_TYPE">notification_type</string>
    <string name="TAG_FEED_TYPE">feed_type</string>
    <string name="TAG_DEEP_LINKING_TYPE">deep_linking_type</string>
    <string name="TAG_LABEL">label</string>
    <string name="TAG_URI">uri</string>
    <string name="TAG_ATTR">attr</string>
    <string name="TAG_TAGS">tags</string>
    <string name="TAG_ID">id</string>
    <string name="TAG_SELECTED">is_selected</string>
    <string name="TAG_NEXT_SHORTLIST_INSTITUTE">next_shortlist_institutes</string>
    <string name="TAG_NEXT_INSTITUTE">next_institutes</string>
    <string name="TAG_NEXT_NEWS">next_news</string>
    <string name="TAG_NEXT_ARTICLES">next_articles</string>
    <string name="TAG_NEXT_QNA_LIST">next_aqna_list</string>
    <string name="TAG_NEXT_FORUMS_LIST">next_forums_list</string>
    <string name="TAG_INSTITUTE_LIKE_DISLIKE">institute_like_dislike</string>
    <string name="TAG_SHORTLIST_INSTITUTE">shortlist</string>
    <string name="TAG_RECOMMENDED_SHORTLIST_INSTITUTE">recommended_shortlist</string>
    <string name="TAG_RECOMMENDED_NOT_INTEREST_INSTITUTE">recommended_not_interested</string>
    <string name="TAG_RECOMMENDED_DECIDE_LATER_INSTITUTE">recommended_decide_later</string>
    <string name="TAG_LOAD_UNDECIDED_INSTITUTE">load_undecided_later</string>
    <string name="otp_title">Help us understand you better</string>
    <string name="enter_mobile_number">Enter Your Mobile Number</string>
    <string name="otp_sent_message">OTP has been sent to your mobile number</string>
    <string name="resend_otp"> Resend OTP</string>
    <string name="submit">SUBMIT</string>
    <string name="verify_number">VERIFY YOUR MOBILE NUMBER</string>
    <string name="currently_in_school">Currently In School</string>
    <string name="currently_in_graduation">In College/ Graduated College</string>
    <string name="currently_in_pg">In Post Graduate College</string>
    <string name="currently_studying_at">Currently Studying At?</string>
    <string name="term_of_services">Term of Services</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="send_feed_back">Send Feedback</string>
    <string name="app_share">Share</string>
    <string name="rate_us_on_google_play">Rate on Google Play</string>
    <string name="do_you_wish_to_study_in">Do you wish to study in</string>
    <string name="or_you_want_to_study">Or you want to study</string>
    <string name="india">India</string>
    <string name="abroad">Abroad</string>
</resources>