<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_wish_to_study_in"
        android:textColor="@color/black"
        android:textSize="@dimen/m16sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:padding="@dimen/m12dp"
        android:orientation="vertical"
        android:importantForAccessibility="yes">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/india"
            android:textAllCaps="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/heading_color"
            android:background="@drawable/border_bottom"
            android:textSize="19sp"
            android:importantForAccessibility="no"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_you_want_to_study"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:padding="@dimen/m12dp"
        android:orientation="vertical"
        android:importantForAccessibility="yes">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abroad"
            android:textAllCaps="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/heading_color"
            android:background="@drawable/border_bottom"
            android:textSize="19sp"
            android:importantForAccessibility="no"/>
    </LinearLayout>

</LinearLayout>