<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/m10dp"
        android:layout_marginTop="@dimen/m5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.TextView.style3"
            android:text="@string/LABEL_CHAT_NOTIFICATION"/>
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_chat_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/m1dp"
        android:background="@color/black"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/m10dp"
        android:layout_marginTop="@dimen/m5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.TextView.style3"
            android:text="@string/LABEL_NEWS_NOTIFICATION"/>
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_news_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/m1dp"
        android:background="@color/black"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/m10dp"
        android:layout_marginTop="@dimen/m5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.TextView.style3"
            android:text="@string/LABEL_ARTICLE_NOTIFICATION"/>
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_article_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/m1dp"
        android:background="@color/black"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/m10dp"
        android:layout_marginTop="@dimen/m5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.TextView.style3"
            android:text="@string/LABEL_OTHER_NOTIFICATION"/>
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_other_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/m1dp"
        android:background="@color/black"/>
</LinearLayout>