<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:layout_marginTop="@dimen/m20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/m3dp"
        app:cardElevation="@dimen/m4dp"
        app:contentPadding="@dimen/m8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="App Version"
                android:paddingBottom="@dimen/m4dp"
                android:textColor="@color/black"
                android:textSize="@dimen/m18sp"/>

            <TextView
                android:id="@+id/app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/m10dp"
                android:textSize="@dimen/m17sp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_marginTop="@dimen/m26dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/m3dp"
        app:cardElevation="@dimen/m4dp"
        app:contentPadding="@dimen/m8dp"
        android:padding="4dp"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/rate_on_google_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_us_on_google_play"
                android:textColor="@color/black"
                android:paddingTop="@dimen/m10dp"
                android:paddingBottom="@dimen/m10dp"
                android:textSize="@dimen/m17sp"/>

            <View
                android:layout_width="match_parent"
                android:background="@color/white_line"
                android:layout_height="1dp"/>

            <TextView
                android:id="@+id/send_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/send_feed_back"
                android:paddingTop="@dimen/m10dp"
                android:paddingBottom="@dimen/m10dp"
                android:textSize="@dimen/m17sp"/>
            <View
                android:layout_width="match_parent"
                android:background="@color/white_line"
                android:layout_height="1dp"/>

            <TextView
                android:id="@+id/app_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/app_share"
                android:paddingTop="@dimen/m10dp"
                android:paddingBottom="@dimen/m10dp"
                android:textSize="@dimen/m17sp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="@dimen/m26dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/m3dp"
        app:cardElevation="@dimen/m4dp"
        app:contentPadding="@dimen/m8dp"
        android:padding="4dp"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/term_of_services"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/term_of_services"
                android:paddingTop="@dimen/m10dp"
                android:paddingBottom="@dimen/m10dp"
                android:textSize="@dimen/m17sp"/>

            <View
                android:layout_width="match_parent"
                android:background="@color/white_line"
                android:layout_height="1dp"/>

            <TextView
                android:id="@+id/app_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/privacy_policy"
                android:paddingTop="@dimen/m10dp"
                android:paddingBottom="@dimen/m10dp"
                android:textSize="@dimen/m17sp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>