<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_banner"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_otp_fragment_color"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/m50dp"
            android:layout_margin="@dimen/m10dp"
            android:gravity="center"
            android:text="@string/otp_title"
            android:textColor="@color/white"
            android:textSize="@dimen/m24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/m2dp"
            android:background="@color/chat_time_gray" />

        <LinearLayout
            android:id="@+id/mobile_number_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/title_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_mobile_number"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/m24sp" />

            <EditText
                android:id="@+id/edt_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/m40dp"
                android:layout_marginRight="@dimen/m40dp"
                android:layout_marginTop="@dimen/m20dp"
                android:background="@drawable/bg_exam_border"
                android:inputType="phone"
                android:maxLength="10"
                android:digits="1234567890"
                android:gravity="center"
                android:textSize="@dimen/m22sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m30dp"
                android:orientation="horizontal">

                <CheckBox android:id="@+id/cb_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="I accept the "
                    android:buttonTint="@color/white"
                    android:textColor="@color/white"
                    android:checked="true"
                    android:textSize="@dimen/m18sp" />

                <TextView android:id="@+id/txt_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="terms and conditions"
                    android:autoLink="web"
                    android:textColor="@color/primary_orange"
                    android:textSize="@dimen/m18sp"
                    />
            </LinearLayout>

            <TextView android:id="@+id/btn_submit_mobile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="@dimen/m40dp"
                android:background="@drawable/bg_button_orange"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/m18sp"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/otp_verify_skip_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginRight="@dimen/m40dp"
                android:padding="@dimen/m8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TAG_SKIP"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/border_bottom"
                    android:textSize="18sp" />

                </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/otp_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/m40dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/otp_sent_message"
                android:textColor="@color/white"
                android:textSize="@dimen/m26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/m40dp"
                android:gravity="center"
                android:text="Enter your OTP"
                android:layout_marginTop="@dimen/m40dp"
                android:textColor="@color/white"
                android:textSize="@dimen/m26sp" />

            <EditText
                android:id="@+id/edt_otp_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/m40dp"
                android:layout_marginRight="@dimen/m40dp"
                android:layout_marginTop="@dimen/m20dp"
                android:background="@drawable/bg_exam_border"
                android:inputType="number"
                android:maxLength="6"
                android:gravity="center"
                android:textSize="@dimen/m24sp" />


            <TextView android:id="@+id/btn_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/m40dp"
                android:layout_marginTop="@dimen/m20dp"
                android:gravity="center_vertical"
                android:text="@string/resend_otp"
                android:textColor="@color/primary_orange"
                android:textSize="@dimen/m20sp" />


            <TextView android:id="@+id/btn_submit_otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/m40dp"
                android:layout_marginRight="@dimen/m40dp"
                android:layout_marginTop="@dimen/m20dp"
                android:background="@drawable/bg_button_orange"
                android:gravity="center"
                android:text="@string/verify_number"
                android:textColor="@color/white"
                android:textSize="@dimen/m18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>